option('cilktool',
       type : 'combo',
       choices : ['', 'none', 'cilksan', 'cilkscale'],
       value : '',
       description : 'OpenCilk instrumentation tool')

option('tbb_dir',
       type : 'string',
       value : '',
       description : 'Absolute path to Intel TBB installation directory')
